# agorica

./: #main.c#  .#main.c  CMakeLists.txt  description.org  free_memory.c  functions.c  main.c  parse.c  structures.c
include/: functions.h  structures.h
